--- a/News Portal/templates/post.html
+++ b/News Portal/templates/post.html
@@ -2,13 +2,14 @@
 
 {% load custom_filters %}
 
-<!-- Название будет News -->
+<!-- Название у нас будет News -->
 {% block title %}
 News
 {% endblock title %}
 
-<!-- В контенте на странице выводим все статьи -->
+<!-- В контенте на странице мы выводим все статьи -->
 {% block content %}
+
     Posts: {{ post | length }}
     {% for post in post %}
     <h2>{{ post.title | censor }}</h2>
@@ -18,5 +19,26 @@ News
     <hr>
     {% endfor %}
 
+   {# Добавляем пагинацию на страницу #}
+   {# Информация о предыдущих страницах #}
+   {% if page_obj.has_previous %}
+       <a href="?page=1">1</a>
+       {% if page_obj.previous_page_number != 1 %}
+           ...
+           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+       {% endif %}
+   {% endif %}
+
+   {# Информация о текущей странице #}
+   {{ page_obj.number }}
+
+   {# Информация о следующих страницах #}
+   {% if page_obj.has_next %}
+       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       {% if paginator.num_pages != page_obj.next_page_number %}
+           ...
+           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+       {% endif %}
+   {% endif %}
 
 {% endblock content %}
