--- a/News Portal/templates/mail/weekly_update.html
+++ b/News Portal/templates/mail/weekly_update.html
@@ -12,7 +12,7 @@
 <h1>News Portal subscription</h1>
 
 <p>
-    Greetings {{username}}! See what posts you have missed in the last week: <br>
+    Hello {{username}}! See what posts you have missed in the last week: <br>
     You can see the post by clicking on the link: <br>
 </p>
     <table>
